# swallow-synth

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/: ci-ruff.yaml
.github/workflows/: ci-ruff.yaml
scripts/abci/: python_cpu.sh
scripts/abci/analysis/: swallow-code-v1.sh
scripts/abci/tools/: merge_jsonl.sh  parquet_to_jsonl.sh
scripts/c/: stage1.sh
scripts/code_qa/: batch_medium.sh  swallow-code-v2.sh
scripts/cpp/: stage1.sh
scripts/medical/: book_ocr.sh
scripts/nemotron/: batch_medium.sh  batch_medium_ja.sh
scripts/nemotron/code/: code-en-reasoning-high.sh  code-en-reasoning-medium.sh  code-ja-reasoning-medium.sh  translate.sh
scripts/nemotron/math/: math-en-reasoning-medium.sh  math-ja-reasoning-medium.sh  translate.sh
scripts/pdf/: pdf_ja.sh
scripts/python/: stage1.sh  stage2.sh  stage3.sh  stage4.sh  stage5.sh
src/: change_question.py  cosmopedia_automath_pipeline.py  cosmopedia_pipeline.py  generate_code_question.py  global_vars.py  pipeline.py  processor.py  translate.py  utils.py  wikipedia_qa.py
src/experimental/: open_code_genetic_instruct.py  open_code_instruct.py  open_code_reasoning.py  open_code_reasoning_dataset.py  open_coder_languages.py  open_math_reasoning.py  open_math_reasoning_delete_think_tag.py
src/languages/: abc.py  c.py  cpp.py  cuda.py  finemath.py  go.py  java.py  javascript.py  python.py  rust.py  typescript.py
src/processor/: cpu_processor.py  gpu_processor.py
src/prompts/: __init__.py
src/static/: style_rewriting_prompt.py
src/tools/: django_analysis.py  low_qulatiy_data.py  math_length_filter.py  merge_jsonl.py  pretrain_thinking.py
tests/: test_cpu_processor.py  test_global_vars.py  test_languages_clang.py  test_languages_go_rust.py  test_languages_js_ts.py  test_languages_python.py  test_pipeline.py  test_prompts.py  test_utils.py
(+92 files in other folders)
