[project]
name = "swallow-code-v2"
version = "0.1.0"
description = "Swallow Code v2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "flashinfer-python>=0.2.7.post1",
    "llmcompressor>=0.5.2",
    "matplotlib>=3.10.3",
    "pyarrow>=20.0.0",
    "ruff>=0.11.10",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "vllm==0.10.0",
]
