[project]
name = "swallow-code-v2"
version = "0.1.0"
description = "Swallow Code v2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "flashinfer-python>=0.2.7.post1",
    "llmcompressor>=0.5.2",
    "matplotlib>=3.10.3",
    "openmpi>=5.0.8",
    "pyarrow>=20.0.0",
    "ruff>=0.11.10",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "vllm==0.10.0",
]

[tool.ruff]
exclude = [
   ".bzr",
   ".direnv",
   ".eggs",
   ".git",
   ".git-rewrite",
   ".hg",
   ".ipynb_checkpoints",
   ".mypy_cache",
   ".nox",
   ".pants.d",
   ".pyenv",
   ".pytest_cache",
   ".pytype",
   ".ruff_cache",
   ".svn",
   ".tox",
   ".venv",
   ".vscode",
   "__pypackages__",
   "_build",
   "buck-out",
   "build",
   "dist",
   "node_modules",
   "site-packages",
   "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
extend-ignore = []
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
case-sensitive = true
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
